<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.aulascrollview.MainActivity" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <RelativeLayout
            android:id="@+id/relative1"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_alignParentLeft="true"
            android:gravity="top" >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/food" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_alignParentBottom="true"
                android:background="@android:drawable/screen_background_dark_transparent" >

                <TextView
                    android:id="@+id/nomeLocal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/nome_local"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/descricaoLocal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_below="@+id/nomeLocal"
                    android:text="@string/descricao_local"
                    android:textColor="#FFFFFF"
                    android:textSize="15sp" />
            </RelativeLayout>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/tituloAvaliacao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
				android:layout_marginTop="194dp"
                android:ems="10" >
                
                <requestFocus />
            </EditText>

            <Spinner
                android:id="@+id/fazerNoLocal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:entries="@array/opcoes_local" />

            <TableLayout
                android:id="@+id/tableRating1"
                android:layout_width="match_parent"
                android:layout_height="fill_parent">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:layout_gravity="center"
                        android:text="@string/atendimento"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <RatingBar
                        android:id="@+id/rating_atendimento"
                        style="?android:attr/ratingBarStyleIndicator"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:isIndicator="false"
                        android:numStars="5"
                        android:stepSize="1.0" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:layout_gravity="center"
                        android:text="@string/comida"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <RatingBar
                        android:id="@+id/rating_comida"
                        style="?android:attr/ratingBarStyleIndicator"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:isIndicator="false"
                        android:numStars="5"
                        android:stepSize="1.0" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:layout_gravity="center"
                        android:text="@string/custo_beneficio"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <RatingBar
                        android:id="@+id/rating_custo_beneficio"
                        style="?android:attr/ratingBarStyleIndicator"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:isIndicator="false"
                        android:numStars="5"
                        android:stepSize="1.0" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:layout_gravity="center"
                        android:text="@string/ambiente"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <RatingBar
                        android:id="@+id/rating_ambiente"
                        style="?android:attr/ratingBarStyleIndicator"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:isIndicator="false"
                        android:numStars="5"
                        android:stepSize="1.0" />
                </TableRow>
            </TableLayout>

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="fill_parent" >

                <TableRow android:gravity="center" >

                    <TextView
                        android:layout_gravity="center"
                        android:text="@string/custo_por_pessoa"
                        android:textSize="15sp"
                        android:textStyle="bold" />
                </TableRow>

                <TableRow android:gravity="center" >

                    <RatingBar
                        android:id="@+id/rating_custo_por_pessoa"
                        style="@style/moneyRatingBar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:isIndicator="false"
                        android:numStars="4"
                        android:stepSize="1.0" />
                </TableRow>
            </TableLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:paddingTop="20dp"
                android:text="@string/estabelecimento_possui"
                android:textSize="20sp"
                android:textStyle="bold" />

            <CheckBox
                android:id="@+id/servico_reserva"
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:text="@string/servico_reserva" />

            <CheckBox
                android:id="@+id/mesas_externas"
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:text="@string/mesas_externas" />

            <CheckBox
                android:id="@+id/musica_ao_vivo"
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:text="@string/musica_ao_vivo" />

            <CheckBox
                android:id="@+id/servico_entrega"
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:text="@string/servico_entrega" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:paddingTop="20dp"
                android:text="@string/voce_voltaria_ao_local"
                android:textSize="20sp"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/radio_group_voltaria"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <RadioButton
                    android:id="@+id/radio_voltaria"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sim" />

                <RadioButton
                    android:id="@+id/radio_nao_voltaria"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nao" />
            </RadioGroup>

            <Button
                android:id="@+id/btn_enviar_dados"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/action_enviar" />
        </LinearLayout>
    </RelativeLayout>

</ScrollView>