<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.mobile.praticaquest5.ActivityResposta" >

    <TextView
		android:id="@+id/nome_local_resposta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:textStyle="bold" />
    
    <TextView
		android:id="@+id/titulo_local_resposta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/nome_local_resposta"
        android:paddingTop="20dp"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
		android:id="@+id/TV_media_avaliacao_resposta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/titulo_local_resposta"
        android:paddingTop="20dp"
        android:text="@string/media_da_avaliacao"
        android:textSize="20sp"
        android:textStyle="bold" />

    <RatingBar
        android:id="@+id/rating_media_resposta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:numStars="5"
        android:layout_below="@+id/TV_media_avaliacao_resposta" />

    <TextView
        android:id="@+id/TV_custo_por_pessoa_resposta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rating_media_resposta"
        android:paddingTop="20dp"
        android:text="@string/custo_por_pessoa"
        android:textSize="20sp"
        android:textStyle="bold" />
    
    
    <RatingBar
        android:id="@+id/rating_custo_por_pessoa_reposta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/moneyRatingBar"
        android:layout_below="@+id/TV_custo_por_pessoa_resposta"
        android:numStars="4" />

    <Button
        android:id="@+id/compartilar_resposta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/rating_custo_por_pessoa_reposta"
        android:layout_below="@+id/rating_custo_por_pessoa_reposta"
        android:layout_marginTop="26dp"
        android:text="@string/compartilhar" />
    
</RelativeLayout>
